adds the text props of  HomePage heading to the en.json file

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -4,5 +4,11 @@
     "label": "Enter a local council.",
     "button": "Choose",
     "error": "You must enter the name of the local council or city."
+  },
+  "heading": {
+    "homePage": {
+      "serviceTitle": "Explore Census",
+      "description": "Use our interactive map to find out how people in England and Wales answered Census 2021 questions about themselves, their health and how they live and work."
+    }
   }
 }
