--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -9,6 +9,9 @@
     "homePage": {
       "serviceTitle": "Explore Census",
       "description": "Use our interactive map to find out how people in England and Wales answered Census 2021 questions about themselves, their health and how they live and work."
+    },
+    "topicsPage": {
+      "serviceTitle": "Select a topic to explore census results for "
     }
   }
 }
