--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -13,5 +13,10 @@
     "topicsPage": {
       "serviceTitle": "Select a topic to explore census results for "
     }
+  },
+  "locationOverview": {
+    "title": "Explore",
+    "peopleSubTitle": "All people (usual residents)",
+    "householdsSubTitle": "All households"
   }
 }
