Feature: Added search to navigation component onClick, added css to match v4 design.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -3,7 +3,9 @@
     "title": "Search by area",
     "label": "Enter a local council.",
     "button": "Choose",
-    "error": "You must enter the name of the local council or city."
+    "error": "You must enter the name of the local council or city.",
+    "reset": "See data for all England and Wales",
+    "close": "Close"
   },
   "heading": {
     "homePage": {
