--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,36 +1,21 @@
 {
   "defaultGeography": "England and Wales",
-  "search": {
-    "title": "Search by area",
-    "label": "Enter a local council.",
-    "button": "Choose",
-    "error": "You must enter the name of the local council or city.",
-    "reset": "See data for all England and Wales",
-    "close": "Close"
-  },
-  "heading": {
-    "homePage": {
+
+  "heading": {},
+  "homePage": {
+    "html": {
+      "title": "2021 Census Data Atlas",
+      "meta": "Explore 2021 census data for England and Wales at a neighbourhood level."
+    },
+    "heading": {
       "serviceTitle": "Explore Census",
       "description": "Use our interactive map to find out how people in England and Wales answered Census 2021 questions about themselves, their health and how they live and work."
     },
-    "topicsPage": {
-      "serviceTitle": "Select a topic to explore census results for "
-    }
-  },
-  "locationOverview": {
-    "title": "Explore {selectedGeographyDisplayName}",
-    "peopleSubTitle": "All people (usual residents)",
-    "householdsSubTitle": "All households",
-    "content": "The 2021 Census tells us a lot about how people in {selectedGeographyDisplayName} live and work."
-  },
-  "homePage": {
     "topicList": {
       "title": "Select a topic",
       "description": "We have grouped census information into topics, categories and subjects to help you find what you are looking for."
-    }
-  },
-  "suggestions": {
-    "homePage": {
+    },
+    "suggestions": {
       "title": "Popular topic searches",
       "content": [
         {
@@ -52,8 +37,13 @@
           "category": "no-central-heating"
         }
       ]
+    }
+  },
+  "locationPage": {
+    "html": {
+      "title": "2021 Census Data Atlas | {selectedGeographyDisplayName} Census"
     },
-    "locationPage": {
+    "suggestions": {
       "title": {
         "hyperlink": "Choose a topic from the full list ",
         "text": "or explore one of these suggestions.",
@@ -80,5 +70,37 @@
         }
       ]
     }
+  },
+  "topicPage": {
+    "heading": {
+      "serviceTitle": "Select {topicArticle} {topicName} category to explore in {selectedGeographyDisplayName}"
+    }
+  },
+  "topicsPage": {
+    "heading": {
+      "serviceTitle": "Select a topic to explore census results for {selectedGeographyDisplayName}"
+    }
+  },
+  "categoryPage": {
+    "html": {
+      "title": "2021 Census Data Atlas | {categoryName} in {selectedGeographyDisplayName}"
+    }
+  },
+  "share": {
+    "title": "Share this page"
+  },
+  "locationOverview": {
+    "title": "Explore {selectedGeographyDisplayName}",
+    "peopleSubTitle": "All people (usual residents)",
+    "householdsSubTitle": "All households",
+    "content": "The 2021 Census tells us a lot about how people in {selectedGeographyDisplayName} live and work."
+  },
+  "search": {
+    "title": "Search by area",
+    "label": "Enter a local council.",
+    "button": "Choose",
+    "error": "You must enter the name of the local council or city.",
+    "reset": "See data for all England and Wales",
+    "close": "Close"
   }
 }
