Feature: Map legend re-design, style fixes, CategoryHeading bg uses choroplethColours.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -102,5 +102,8 @@
     "error": "You must enter the name of the local council or city.",
     "reset": "See data for all England and Wales",
     "close": "Close"
+  },
+  "mapKey": {
+    "button": "Collapse"
   }
 }
