Feature: Explore something else component. Style tweaks/fixes.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -105,5 +105,13 @@
   },
   "mapKey": {
     "button": "Collapse"
+  },
+  "explore": {
+    "title": "Explore something else",
+    "newTopicLabel": "New topic",
+    "newCategoryLabel": "New Category",
+    "chooseLocationLabel": "Choose location",
+    "newLocationLabel": "New location",
+    "backToStartLabel": "Back to start"
   }
 }
