Fix: General design sweep, deletion of old code/components. Footer styled with links.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -113,5 +113,13 @@
     "chooseLocationLabel": "Choose location",
     "newLocationLabel": "New location",
     "backToStartLabel": "Back to start"
+  },
+  "footer": {
+    "label": "Is this page useful?",
+    "links": [
+      { "label": "Yes", "href": "/" },
+      { "label": "No", "href": "/" }
+    ],
+    "help": { "label": "Can’t find what you’re looking for?", "href": "/" }
   }
 }
